--- a/index.html
+++ b/index.html
@@ -1754,43 +1754,63 @@ function hideAllPages(){ document.querySelectorAll('.page').forEach(p=>p.classLi
 function scrollToSection(id){ setTimeout(()=>{ document.getElementById(id)?.scrollIntoView({behavior:'smooth'}); },120); }
 
 function switchPage(id, fromPopstate = false){
-  hideAllPages();
-  const el = document.getElementById(id || 'customerPage');
+  // 🔒 fallback
+  if(!id) id = 'customerPage';
+
+  // 1️⃣ Hide all pages
+  document.querySelectorAll('.page')
+    .forEach(p => p.classList.remove('show'));
+
+  // 2️⃣ Show target page
+  const el = document.getElementById(id);
   if(el) el.classList.add('show');
 
+  // 3️⃣ Page title
   const titles = {
-    "customerPage": "Vaishnav Delights — Buy Pure & Authentic Thekua Online in India",
-    "cartPage": "Your Shopping Cart — Vaishnav Delights",
-    "accountPage": "My Account — Vaishnav Delights",
-    "loginPage": "Login — Vaishnav Delights",
-    "signupPage": "Signup — Vaishnav Delights",
-    "trackPage": "Track Order — Vaishnav Delights",
-    "ordersPage": "My Orders — Vaishnav Delights",
-    "forgotPage": "Forgot Password — Vaishnav Delights",
-    "adminPage": "Admin — Vaishnav Delights"
+    customerPage: "Vaishnav Delights — Buy Pure & Authentic Thekua Online in India",
+    cartPage: "Your Shopping Cart — Vaishnav Delights",
+    checkoutAddressPage: "Checkout — Address",
+    checkoutPaymentPage: "Checkout — Payment",
+    trackPage: "Track Order — Vaishnav Delights",
+    ordersPage: "My Orders — Vaishnav Delights",
+    loginPage: "Login — Vaishnav Delights",
+    signupPage: "Signup — Vaishnav Delights",
+    forgotPage: "Forgot Password — Vaishnav Delights",
+    accountPage: "My Account — Vaishnav Delights",
+    adminPage: "Admin — Vaishnav Delights",
+    orderSuccessPage: "Order Placed — Vaishnav Delights"
   };
-  document.title = titles[id] || "Vaishnav Delights — Buy Pure & Authentic Thekua Online in India";
+  document.title = titles[id] || titles.customerPage;
 
+  // 4️⃣ Footer control
   const footer = document.getElementById('mainFooter');
   if(footer){
-    if(id==='loginPage' || id==='signupPage' || id==='forgotPage')
-      footer.style.display='none';
-    else
-      footer.style.display='block';
+    footer.style.display =
+      (id === 'loginPage' || id === 'signupPage' || id === 'forgotPage')
+        ? 'none'
+        : 'block';
   }
 
-  if(id==='customerPage') renderProducts();
-  if(id==='cartPage') renderCart();
-  if(id==='adminPage') renderAdminOrders();
-  if(id==='ordersPage') renderOrdersPage();
+  // 5️⃣ Page-specific renders
+  if(id === 'customerPage') renderProducts();
+  if(id === 'cartPage') renderCart();
+  if(id === 'adminPage') renderAdminOrders();
+  if(id === 'ordersPage') renderOrdersPage();
 
+  // 6️⃣ Update UI
   updateAccountUI();
-  closeMenu();
+  closeMenu?.();
 
-  if (!fromPopstate) {
-    history.pushState({ page: id }, '', window.location.pathname);
+  // 7️⃣ 🔥 URL + HISTORY (MOST IMPORTANT)
+  if(!fromPopstate){
+    history.pushState(
+      { page: id },
+      '',
+      `#${id}`
+    );
   }
 }
+
 
 function toggleMenu(){
   const dd = document.getElementById('menuDropdown');
@@ -2619,9 +2639,10 @@ async function loadSession(){
     renderCart();
     updateAccountUI();
 
-    const initialPage = 'customerPage';
-    history.replaceState({ page: initialPage }, '', window.location.pathname);
+    // 🔥🔥🔥 YAHI MAIN FIX 🔥🔥🔥
+    const initialPage = getPageFromURL();
     switchPage(initialPage, true);
+
   }catch(e){
     console.error('loadSession err', e);
   } finally {
