--- a/index.html
+++ b/index.html
@@ -1753,15 +1753,22 @@ function closePolicyModal(){
 function hideAllPages(){ document.querySelectorAll('.page').forEach(p=>p.classList.remove('show')); }
 function scrollToSection(id){ setTimeout(()=>{ document.getElementById(id)?.scrollIntoView({behavior:'smooth'}); },120); }
 
-function switchPage(id, fromPopstate = false){
-  if(!id) id = 'customerPage';
 
+function switchPage(id, fromPopstate = false){
+  // ✅ SAFETY: invalid / missing id
+  if(!id || !document.getElementById(id)){
+    id = 'customerPage';
+  }
+
+  // hide all pages
   document.querySelectorAll('.page')
     .forEach(p => p.classList.remove('show'));
 
+  // show selected page
   const el = document.getElementById(id);
-  if(el) el.classList.add('show');
+  el.classList.add('show');
 
+  // page titles
   const titles = {
     customerPage: "Vaishnav Delights",
     cartPage: "Cart",
@@ -1775,11 +1782,12 @@ function switchPage(id, fromPopstate = false){
   };
   document.title = titles[id] || titles.customerPage;
 
+  // ✅ push hash ONLY when not back/forward
   if(!fromPopstate){
     history.pushState(
       { page: id },
       '',
-      `#${id}`       // 🔥 HASH IS MUST
+      `#${id}`
     );
   }
 }
@@ -2613,12 +2621,15 @@ async function loadSession(){
     loadWish();
     updateAccountUI();
 
-    // 🔥🔥🔥 THIS IS THE FIX
-   window.addEventListener('popstate', () => {
-  const page = getPageFromURL();
-  switchPage(page, true);
-});
+    // ✅ ADD THIS (initial page restore)
+    const page = getPageFromURL();
+    switchPage(page, true);
 
+    // ✅ back / forward support
+    window.addEventListener('popstate', () => {
+      const p = getPageFromURL();
+      switchPage(p, true);
+    });
 
   }catch(e){
     console.error('loadSession error', e);
